src/main.scss
/* ... */
.hero-title {
  position: relative;
  top: 32%;
  padding-top: 50%;
  overflow: hidden;
}

h1.hero-title__first,
h2.hero-title__second {
  position: absolute;
  top: 2rem;
  left: 0;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  backface-visibility: hidden;
  font-size: $h1-font-size;
  font-weight: $font-weight-bolder;
  z-index: 3;
  opacity: 0;
  transform: translate3d(10%,0,0);
}

h2.hero-title__second {
  top: 8rem;
  left: -5%;
  font-size: $h2-font-size;
}

.mousefollow-bg {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 0;
  z-index: 9999;
  height: 100vh;
  background: url("images/crosshairs_single.png");
  overflow: hidden;
  opacity: 0;
}

// Main part
.mds-gray-background {
  position: relative;
  @include gradient-x;
  @include box-shadow(0px -2px 12px 3px rgba(0,0,0,.75));
  overflow-x: hidden;
}

// Portfolio sections
.mds-section,
.mds-footer {
  width: 100%;
  height: auto;
  padding: 7% 0;
}

.mds-footer {
  padding-top: 0;
  height: 100vh;
}

.mds-intro__text {
  font-size: $h3-font-size;
  line-height: $display-line-height;
}

.mds-text__box {
  font-size: $font-size-lg;
}

.mds-text__box:first-child {
  margin-top: -.45rem;
}

.mds-title-text {
  top: 0;
  left: 0;
  font-size: $display2-size;
  text-align: center;
}

.mds-title {
  font-size: $display2-size;
  text-align: center;
}

.port-subtitle {
  position: relative;
  font-size: $display4-size;
  margin-bottom: 2rem;
  font-weight: $font-weight-light;
}

// portfolio slide in elements
.port-slide--in {
  opacity: 0;
  transition: all .35s;
}

.port-slide--in.port-align--left {
  transform: translate3d(-30%, 0, 0) scale(.8);
}

.port-slide--in.port-align__right {
  transform: translate3d(30%, 0, 0) scale(.8);
}

.port-slide--in.port-slide-in--active {
  opacity: 1;
  transform: translate3d(0, 0, 0) scale(1);
}

// Modifiers ###################

// JS related modifiers

// Custom

// Navigation hider
.black--screen {
  position: relative;
}

.black--screen:before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  width: 100%;
  height: 100%;
  background: #000;
}

// Title
.opacity-on-quarter--element {
  opacity: .25;
  transition: opacity 500ms;
  width: 150%;
  height: 150%;
}

.title-first--animation,
.title-second--animation {
  animation-name: title1;
  animation-duration: .75s;
  animation-direction: normal;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.title-second--animation {
  animation-delay: .2s;
}

@keyframes title1 {
  0% {
    opacity: 0;
    transform: translate3d(10%,0,0);
  }
  100% {
    opacity: 1;
    transform: translate3d(15%,0,0);
  }
}

// Image slider 
.mds-slide-container {
  position: relative;
  width: 100%;
  padding-bottom: 66.4%;
}

.mds-slide--mb-s {
  margin-bottom: 2.8rem;
}

.mds-slide--mb-m {
  margin-bottom: 6rem;
}

.mds-slide--mb-ml {
  margin-bottom: 6.5rem;
}

.mds-slide--mb-l {
  margin-bottom: 6.5rem;
}

.mds-next,
.mds-prev {
  position: absolute;
  top: 50%;
  left: 0;
  color: $black;
  width: 50%;
  height: 100%;
  transform: translateY(-50%);
  z-index: 3;
  font-size: $lead-font-size;
  text-align: center;
  cursor: pointer;
}

.mds-next {
  left: auto;
  right: 0;
}

.mds-next i,
.mds-prev i {
  position: absolute;
  top: 50%;
  left: 2%;
  display: block;
}

.mds-next i {
  left: auto;
  right: 2%;
}

.mds-slider {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  opacity: 0;
  transition: all 500ms;
}

.mds-slider-first {
  opacity: 1;
  transition: all 500ms;
}

.mds-active {
  opacity: 1;
  transition: all 500ms;
}

// General CSS modifiers

.font-black {
  font-weight: $font-weight-bolder;
}

.mds--centered {
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.mds-text-link {
  color: $orange;
} 

// title specific media queries for large devices
@media (min-width: 1199.99px) and (max-width: 1650px){
  h1.hero-title__first,
  h2.hero-title__second {
    font-size: 5rem;
  }
  
  h2.hero-title__second {
    font-size: 5rem;
  }
}

// Large devices (desktops, less than 1200px)
@include media-breakpoint-down(lg){
  .mds-title-text,
  .mds-title {
    font-size: 4rem;
  }
  .mds-slide--mb-l {
    margin-bottom: 4.9rem;
  }
}

// Large devices (desktops, 992px and up)
@include media-breakpoint-only(lg){
  h1.hero-title__first,
  h2.hero-title__second {
    font-size: 4rem;
  }
  
  h2.hero-title__second {
    font-size: 3.5rem;
  }
}

// Smaller devices (desktops, 992px and down)
@include media-breakpoint-down(md){
  #mobile-logo {
    position: absolute;
    top: 0.2rem;
    right: 0.7rem;
    z-index: 998;
    display: block;
    color: #fff;
    h1 {
      font-size: 2.275rem;
      font-weight: 300;
    }
  }
}

// title specific media queries for medium devices
@media (min-width: 992px) and (max-width: 1000px){
  h1.hero-title__first,
  h2.hero-title__second {
    font-size: 3rem;
  }
  
  h2.hero-title__second {
    font-size: 2.5rem;
  }
}

// Medium devices (tablets, 768px and up)
@include media-breakpoint-only(md){
  h1.hero-title__first,
  h2.hero-title__second {
    font-size: 3rem;
  }
  
  h2.hero-title__second {
    top: 6rem;
    font-size: 2.5rem;
  }
}

// Small devices (landscape phones, less than 768px)
@include media-breakpoint-down(sm){
  .mds-title-text,
  .mds-title {
    font-size: 3rem;
    line-height: 1;
  }

  .mds-intro__text {
    font-size: 0.9rem;
  }

  .port-subtitle {
    font-size: 2rem;
    line-height: 1.3;
  }

  .mds-text__box:first-child {
    margin-top: 0.5rem;
  }

  .mds-order--1 {
    display: flex;
    order: 1;
  }
  
  .mds-order--2 {
    display: flex;
    order: 2;
  }

  .mds-slide--mb-m {
    margin-bottom: 2.8rem;
  }
  
  .mds-slide--mb-l {
    margin-bottom: 3.1rem;
  }

  .mds-slide--mb-ml {
    margin-bottom: 4.8rem;
  }
}
/* ... */

